refactor of getUserGroupById restoring missing fields